# fastapi-service

./: .coveragerc  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-entrypoint.sh  init.sql  pyproject.toml
alembic/: env.py  upgrade.sh
alembic/versions/: 2023_12_17_0202-4857fbd74ba4_organization.py  2023_12_17_0203-be11f0406681_update_modified_time_stamp.py  2023_12_17_0204-8f239109a675_modified_organization_trigger.py  2023_12_17_0208-f32c2b8be7bb_client_initial.py  2023_12_17_0209-211e2f140759_modified_client_trigger.py  2023_12_17_0210-8b5b67a1b4ad_invoice_initial.py  2023_12_17_0232-b6fbe4de4edd_modified_invoice_trigger.py  2023_12_17_0246-f32c2b8be7bb_client_initial.py
secrets/: alembic.ini  secrets.ini
src/: api.py  main.py
src/core/: database.py  settings.py
src/core/exceptions/: exception.py  exception_handler.py
src/models/: client.py  invoice.py  organization.py
src/repositories/: client.py  organization.py
src/routes/: client.py  organization.py
src/schemas/: client.py  error.py  organization.py
src/services/: client.py  organization.py
tests/unit/core/: test_exception_handler.py
tests/unit/routes/: test_client.py  test_organization.py
tests/unit/services/: test_organization.py
